add_executable(frontend_tst frontend.cpp)
target_link_libraries(frontend_tst ${EXTRA_LIBS})
add_test(frontend ${CMAKE_CURRENT_BINARY_DIR}/frontend_tst)
add_executable(scanner scanner.cpp)
target_link_libraries(scanner ${EXTRA_LIBS})
add_test(scanner ${CMAKE_CURRENT_BINARY_DIR}/scanner)
add_executable(parser parser.cpp)
target_link_libraries(parser ${EXTRA_LIBS})
add_test(parser ${CMAKE_CURRENT_BINARY_DIR}/parser)
add_executable(pp pp.cpp)
target_link_libraries(pp ${EXTRA_LIBS})
add_test(pp ${CMAKE_CURRENT_BINARY_DIR}/pp)
