set(kernel_tst_objs ${LEAN_OBJS})
add_executable(level level.cpp ${kernel_tst_objs})
target_link_libraries(level ${EXTRA_LIBS})
add_exec_test(level "level")
add_executable(expr expr.cpp ${kernel_tst_objs})
target_link_libraries(expr ${EXTRA_LIBS})
add_exec_test(expr "expr")
add_executable(max_sharing max_sharing.cpp ${kernel_tst_objs})
target_link_libraries(max_sharing ${EXTRA_LIBS})
add_exec_test(max_sharing "max_sharing")
add_executable(free_vars free_vars.cpp ${kernel_tst_objs})
target_link_libraries(free_vars ${EXTRA_LIBS})
add_exec_test(free_vars "free_vars")
add_executable(replace replace.cpp ${kernel_tst_objs})
target_link_libraries(replace ${EXTRA_LIBS})
add_exec_test(replace "replace")
add_executable(environment environment.cpp ${kernel_tst_objs})
target_link_libraries(environment ${EXTRA_LIBS})
add_exec_test(environment "environment")
add_executable(instantiate instantiate.cpp ${kernel_tst_objs})
target_link_libraries(instantiate ${EXTRA_LIBS})
add_exec_test(instantiate "instantiate")
