set(kernel_tst_objs ${LEAN_OBJS})
add_executable(level level.cpp ${kernel_tst_objs})
target_link_libraries(level ${EXTRA_LIBS})
add_exec_test(level "level")
add_executable(max_sharing max_sharing.cpp ${kernel_tst_objs})
target_link_libraries(max_sharing ${EXTRA_LIBS})
add_exec_test(max_sharing "max_sharing")
add_executable(environment environment.cpp ${kernel_tst_objs})
target_link_libraries(environment ${EXTRA_LIBS})
add_exec_test(environment "environment")
